<resources>
    <string name="app_name">ViruApp</string>

    <string name="email_address">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login_now">Iniciar Sesión</string>
    <string name="dont_user">No tienes una cuenta?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_promo">Promociones</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">Crear Promoción</string>
    <string name="menu_exit">Cerrar Sesión</string>

    <string name="txt_name_promo">Ingrese el Nombre de la Promoción</string>
    <string name="create_promo">Crear Promoción</string>

    <string name="txt_seleccione">Seleccione un Módulo</string>

    <string name="txt_solicitud">Fecha de Solicitud</string>
    <string name="txt_memo">Fecha de Memorandum</string>
    <string name="txt_informe">Informe/Horas</string>
    <string name="check_recibo">Tiene Recibo</string>
    <string name="check_proyecto">Tiene Proyecto</string>
    <string name="check_f_super">Ficha de Supervisión</string>
    <string name="btn_update">Actualizar</string>

    <string name="txt_galery">Programa de Estudios de Industrias Alimentarias</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
